src/objects/Cohort__c.object
<CustomObject>
    <description>This object houses information about cohorts for field experiences (PCE, DT, Nursing, etc).</description>
    <fields>
        <fullName>AvailableForStudents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field that drives whether or not a student is able to select the cohort in their task page on the field experience portal.</description>
        <inlineHelpText>If checked true, the students will be able to select the cohort in the portal.</inlineHelpText>
        <label>Available For Students</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CohortHospital__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cohort Hospital</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cohorts</relationshipLabel>
        <relationshipName>Cohorts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CohortLocation__c</fullName>
        <label>Cohort Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CohortMonth__c</fullName>
        <label>Cohort Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CohortStartDate__c</fullName>
        <label>Cohort Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CohortYear__c</fullName>
        <label>Cohort Year</label>
        <picklist>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this Cohort__c record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cohort</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AvailableForStudents__c</columns>
        <columns>CohortMonth__c</columns>
        <columns>CohortYear__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FieldExperiencesCohorts</fullName>
        <columns>NAME</columns>
        <columns>CohortMonth__c</columns>
        <columns>CohortYear__c</columns>
        <columns>AvailableForStudents__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Cohort__c.EnrollmentPrelicensure</value>
        </filters>
        <label>Field Experiences Cohorts</label>
        <sharedTo>
            <roleAndSubordinatesInternal>DirectorofFieldExperiences</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Cohort Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Ia0000001u7fqEAA_00Na0000009SlNyEAK</fullName>
        <active>true</active>
        <field>EnrollmentPrelicensure__c.Cohort__c</field>
        <filterItems>
            <field>Cohort__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Enrollment Prelicensure</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Enrollment Prelicensure_Cohort</name>
    </namedFilters>
    <pluralLabel>Cohorts</pluralLabel>
    <recordTypes>
        <fullName>EnrollmentPrelicensure</fullName>
        <active>true</active>
        <label>Enrollment Prelicensure</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieldExperiences</fullName>
        <active>true</active>
        <description>Record type for Field Experiences</description>
        <label>Field Experiences</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>